<resources>
    <string name="app_name">Todo</string>
    <string name="all_tasks">All Tasks</string>
    <string name="categories">Categories</string>
    <string name="analytics">Analytics</string>
    <string name="search">Search</string>
    <string name="today_tasks">TODAY\'S TASKS</string>
    <string name="new_task">Add New Task</string>

    <plurals name="tasks_in_category">
        <item quantity="one">1 task</item>
        <item quantity="other">%s tasks</item>
    </plurals>

</resources>