<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimaryVariant">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vl_guideline"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="48dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/ht_guideline"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="?attr/actionBarSize" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vr_guideline"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_end="48dp" />


    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/ib_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:minWidth="48dp"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="@id/ht_guideline"
        app:layout_constraintEnd_toEndOf="@id/vr_guideline"
        app:layout_constraintStart_toStartOf="@id/vr_guideline"
        app:layout_constraintTop_toTopOf="@id/ht_guideline"
        app:srcCompat="@drawable/ic_arrow_back_24" />


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_avatar"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginTop="16dp"
        android:src="@mipmap/ic_launcher"
        app:civ_border_color="?attr/colorOnPrimary"
        app:civ_border_width="2dp"
        app:layout_constraintStart_toEndOf="@id/vl_guideline"
        app:layout_constraintTop_toBottomOf="@id/ht_guideline" />


    <TextView
        android:id="@+id/tv_first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textAppearance="?attr/textAppearanceHeadline5"
        android:textColor="?attr/colorOnPrimary"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/vl_guideline"
        app:layout_constraintTop_toBottomOf="@id/iv_avatar"
        tools:text="Mohammad Ershad" />

    <TextView
        android:id="@+id/tv_last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textStyle="bold"
        android:textColor="?attr/colorOnPrimary"
        android:textAppearance="?attr/textAppearanceHeadline5"
        app:layout_constraintStart_toEndOf="@id/vl_guideline"
        app:layout_constraintTop_toBottomOf="@id/tv_first_name"
        tools:text="Nasri" />


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@id/vr_guideline"
        app:layout_constraintStart_toStartOf="@id/vl_guideline"
        app:layout_constraintTop_toBottomOf="@id/tv_last_name">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/allTasksMenuItem"
            style="@style/MaterialDrawerTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_task_24"
            android:text="@string/all_tasks" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/categoriesMenuItem"
            style="@style/MaterialDrawerTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_category_24"
            android:text="@string/categories" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/analyticsMenuItem"
            style="@style/MaterialDrawerTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_analytics_24"
            android:text="@string/analytics" />


    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.constraintlayout.widget.ConstraintLayout>